# avdecc-widget

./: .gitignore  CMakeLists.txt  README.md
avdecc-widget/: CMakeLists.txt  Info.plist  avdecc-app.cpp  avdecc_end_station_configuration.cpp  avdecc_end_station_details.cpp  avdecc_stream_configuration.cpp  avdecc_stream_connections.cpp  end_station_configuration.cpp  end_station_details.cpp  end_station_details.h  stream_configuration.cpp
avdecc-widget.xcodeproj/: project.pbxproj
avdecc-widget.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
avdecc-widget.xcodeproj/project.xcworkspace/xcshareddata/: avdecc-widget.xccheckout
avdecc-widget.xcodeproj/project.xcworkspace/xcuserdata/Victor.xcuserdatad/: UserInterfaceState.xcuserstate
avdecc-widget.xcodeproj/xcuserdata/Victor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
avdecc-widget.xcodeproj/xcuserdata/Victor.xcuserdatad/xcschemes/: avdecc-widget.xcscheme  xcschememanagement.plist
avdecc-widget/include/: avdecc-app.h  avdecc_end_station_configuration.h  avdecc_end_station_details.h  avdecc_stream_configuration.h  avdecc_stream_connections.h  end_station_configuration.h  end_station_details.h  notif_log.h  stream_configuration.h
avdecc-widgetTests/: Info.plist  avdecc_widgetTests.m
